# libgatekeeper

./: .gitignore  CMakeLists.txt  COMPILING.md
cmake/: FindLibFreefare.cmake  FindLibGcrypt.cmake  FindLibNfc.cmake  FindUUID.cmake
examples/: CMakeLists.txt  format-tag.c  issue-tag.c
libgatekeeper/: CMakeLists.txt
libgatekeeper/include/gatekeeper/: gatekeeper.h
libgatekeeper/src/: crypto.c  crypto.h  encoding.c  encoding.h  gatekeeper.c
